--- a/serverless.yml
+++ b/serverless.yml
@@ -1,26 +1,10 @@
-name: NEXT Deploy
-on:
-  push:
-    branches: master
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout source code.
-        uses: actions/checkout@v2
-        with:
-          ref: master
-      - name: Install with npm
-        run: |
-          npm install
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-      - name: CF Invalidate Cache
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'
-      - name: Deploy App
-        run: |
-          npx serverless@2.72.2
+domaindeploytest:
+  component: "@sls-next/serverless-component@3.7.0-alpha.10"
+  inputs:
+    name:
+      defaultLambda: DefaultLambda
+      imageLambda: ImageLambda
+    bucketRegion: us-east-1
+    bucketName: 'domaindeploytest'
+    cloudfront:
+      comment: 'next deploy'
