--- a/serverless.yml
+++ b/serverless.yml
@@ -7,4 +7,5 @@ domaindeploytest:
     bucketRegion: us-east-1
     bucketName: 'domaindeploytest'
     cloudfront:
+      distributionId: 'ESIOQ5ZPA1T6K'
       comment: 'next deploy'
