--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,9 @@ jobs:
           node-version: 12.x
       - name: Build
         run: |
-          npm run build
+          npm install -g yarn
+          yarn install --frozen-lockfile
+          yarn build
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
