--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,23 +8,26 @@ jobs:
     steps:
       - name: Checkout source code.
         uses: actions/checkout@v2
-
-      - name: use Node ver 12.x
-        uses: actions/setup-node@v1
         with:
-          node-version: 12.x
-      - name: Build
-        run: |
-          npm install -g yarn
-          yarn install --frozen-lockfile
-          yarn build
+          ref: master
+      # - name: use Node ver 12.x
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: 12.x
+      - name: npm Install
+        # run: |
+        #   npm install -g yarn
+        #   yarn install --frozen-lockfile
+        #   yarn build
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-      - name: Deploy to S3
-        run: aws s3 sync ./${{ secrets.BUILD_DIRECTORY }} ${{ secrets.AWS_S3_BUCKET_NAME }} --acl public-read --delete
-      - name: CF Invalidate Cache
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'
+      # - name: Deploy to S3
+      #   run: aws s3 sync ./${{ secrets.BUILD_DIRECTORY }} ${{ secrets.AWS_S3_BUCKET_NAME }} --acl public-read --delete
+      # - name: CF Invalidate Cache
+      #   run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'
+      - name: Deploy by serverless
+        run: npx serverless@2.72.2
