--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code.
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
           ref: master
       # - name: use Node ver 12.x
@@ -15,12 +15,13 @@ jobs:
       #   with:
       #     node-version: 12.x
       - name: npm Install
+        run: npm install
         # run: |
         #   npm install -g yarn
         #   yarn install --frozen-lockfile
         #   yarn build
       - name: Configure AWS Credentials
-      - uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
