--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      # - name: npm Install
+      - name: npm Install
       #   run: npm install
         run: |
           npm install -g yarn
