--- a/serverless.yml
+++ b/serverless.yml
@@ -1,11 +1,12 @@
-# domaindeploytest:
-#   component: "@sls-next/serverless-component@3.7.0-alpha.10"
-#   inputs:
-#     name:
-#       defaultLambda: DefaultLambda
-#       imageLambda: ImageLambda
-#     bucketRegion: us-east-1
-#     bucketName: 'domaindeploytest'
-#     cloudfront:
-#       distributionId: 'E2AVLRM8CWJQPZ'
-#       comment: 'next deploy'
+domaindeploytest:
+  component: "@sls-next/serverless-component@3.7.0-alpha.10"
+  inputs:
+    policy: "arn:aws:iam::aws:policy/AdministratorAccess"
+    name:
+      defaultLambda: DefaultLambda
+      imageLambda: ImageLambda
+    bucketRegion: us-east-1
+    bucketName: 'domaindeploytest'
+    cloudfront:
+      distributionId: 'E2AVLRM8CWJQPZ'
+      comment: 'next deploy'
