--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
       #   uses: actions/setup-node@v1
       #   with:
       #     node-version: 12.x
+      - name: Install serverless cli
+        run: npm install -g @serverless/cli
       - name: npm Install
         run: npm install
         # run: |
@@ -31,4 +33,4 @@ jobs:
       # - name: CF Invalidate Cache
       #   run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'
       - name: Deploy by serverless
-        run: npx serverless@2.72.2
+        run: components-v1
