--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "styled-reset": "^4.4.2"
   },
   "devDependencies": {
-    "@types/node": "18.7.14",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "^14.18.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.26",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
