--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-deploy": "next build"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^3.5.11",
     "@tosspayments/payment-sdk": "^1.1.1",
     "axios": "^1.1.0",
-    "next": "^11.1.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.2"
   },
   "devDependencies": {
-    "@types/node": "^14.18.0",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "@types/styled-components": "^5.1.26",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
