--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-deploy": "next build"
+    "vercel-deploy": "next build",
+    "netlify-deploy": "next build"
   },
   "dependencies": {
     "@tosspayments/payment-sdk": "^1.1.1",
