--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tosspayments/payment-sdk": "^1.1.1",
     "@vendia/serverless-express": "^4.10.1",
+    "aws-sdk": "^2.1253.0",
     "axios": "^1.1.0",
     "express": "^4.18.2",
     "next": "^12.3.1",
