--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -162,12 +162,13 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::980924604087:role/github-actions-role
+          # role-to-assume: arn:aws:iam::980924604087:role/github-actions-role
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
 
-      - uses: google-github-actions/setup-gcloud@v0.2.0
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v0.2.0
         with:
           project_id: ${{ secrets.CLOUD_RUN_PROJECT_NAME }}
           service_account_key: ${{ secrets.CLOUD_RUN_SERVICE_ACCOUNT }}
